2010-10-11  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* shr.el (shr-current-column): New function.
	(shr-find-fill-point): New function.

2010-10-11  Michael Welsh Duggan  <md5i@md5i.com>  (tiny change)

	* sieve-manage.el (sieve-manage-open): Allow port names as well as port
	numbers.

2010-10-11  Julien Danjou  <julien@danjou.info>

	* shr.el (shr-hr-line): Add.
	(shr-tag-hr): Use shr-hr-line to specify which character to use to
	display hr lines.
	(shr-max-columns): Do not change state to nil if we just inserting
	spaces.

2010-10-11  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* gnus-topic.el (gnus-topic-read-group): If after the last group,
	select the last group.

2010-10-11  Teodor Zlatanov  <tzz@lifelogs.com>

	* gnus-int.el (gnus-run-hook-with-args): Autoload from gnus-util.el.

2010-10-10  Dan Nicolaescu  <dann@ics.uci.edu>

	* dig.el (dig-mode-map): Declare and define in one step.

2010-10-10  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* nnimap.el (nnimap-update-qresync-info): \Flagged messages are read
	for Gnus.
	(nnimap-retrieve-group-data-early): utf7-encode the group parameters.
	(nnimap-update-qresync-info): Mark \Seen articles as read.

	* gnus-sum.el (gnus-summary-set-local-parameters): Ignore the `active'
	non-variable, too.

	* nnimap.el (nnimap-open-connection): Use gnutls STARTTLS, if
	available.
	(nnimap-update-info): Rely more on the current active than the param
	active to avoid marking articles as read too much.

	* auth-source.el (auth-source-create): Use (user-login-name) for the
	user name default.

	* nnimap.el (nnimap-update-info): If the server doesn't return any
	useful info, just use the previous info.
	(nnimap-update-info): Prefer old info over start-article.
	(nnimap-update-qresync-info): Finish implementing QRESYNC.

2010-10-10  Andrew Cohen  <cohen@andy.bu.edu>

	* nnir.el (autoload): Clean up autoloads.
	(nnir-imap-default-search-key): Renamed from
	nnir-imap-search-field. Use key rather than value.